images added to index buttons started for the links to outside sites

--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cara Cara</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <nav>
+        <ul>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>PRODUCTS</li>
+          <li>CONTACT</li>
+          <li>CARA <img stlye = 'height: 5px'src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-pottery-96.png> CARA</li>
+        </ul>
+        <form method="post"
+            <label id = 'product'>
+                <input name="submitted-product" autocomplete="prodcut" aria-labelledby="product"/>
+            </label>
+            <button><span> <img style='height: 10px' src="C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\1200px-Google_Magnifying_Glass.svg.png"></span></button>
+      </nav>
+    </header>
+    <main>
+      <img src=C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\neo-v69Rgy8pPyk-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\nordwood-themes-nDd3dIkkOLo-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\oriento-l0ah3UBLppo-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\oriento-maVIpNNtmlQ-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-3uwu5K0RtaE-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-oiZAQvxTcYQ-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-7HuTGlUfQSo-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-bgIO-u4GEfI-unsplash.jpg>
+      <img src =C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-SITGdvztUdg-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\tom-crew-YA2E3d7a9Wo-unsplash.jpg>
+      <img src=C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\linh-le-a0rE64YJDA4-unsplash.jpg>
+      <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\Vase_Dame_2048x2048.jpg >
+    </main>
+    <footer>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-tiktok-96.png></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-facebook-96.png></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-instagram-96.png></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-youtube-96.png></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-twitter-96.png></button>
+    </footer>
   </body>
 </html>
+<!-- background image/span in between
