linked style sheet

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cara Cara</title>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
       <nav>
         <ul>
+          <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\earl-wilcox-y3W0CzO063w-unsplash-alt.jpg>
           <li>HOME</li>
           <li>ABOUT</li>
           <li>PRODUCTS</li>
@@ -38,11 +41,17 @@
       <img src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\Vase_Dame_2048x2048.jpg >
     </main>
     <footer>
-      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-tiktok-96.png></button>
-      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-facebook-96.png></button>
-      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-instagram-96.png></button>
-      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-youtube-96.png></button>
-      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-twitter-96.png></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-tiktok-96.png
+        alt="tiktok link"
+        ></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-facebook-96.png
+        alt="facebook"></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-instagram-96.png
+        alt="instagram"></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-youtube-96.png
+        alt="youtube"></button>
+      <button><img stlye = 'height: 5px' src = C:\Users\Britt\OneDrive\Desktop\devCodeCamp\eCommerce\assets\icons8-twitter-96.png
+        alt="twitter"></button>
     </footer>
   </body>
 </html>
